2006-03-15  10:30 wwp <subscript@free.fr>
	* src/feed.c
		Use a better solution for timeouts (thanks to Colin)

2006-03-14  13:00 wwp <subscript@free.fr>
	* src/plugin.c
		Properly init curl outside of any thread (thanks to Colin)

2006-03-11  13:01 Colin Leroy <colin@colino.net>
	* src/feed.c
		Add curl timeout after one minute

2006-03-01  19:01 Colin Leroy <colin@colino.net>
	* src/rssyl_cb_menu.c
		Add offline override message.

2006-02-26  13:01 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		Apply patch to defer check for feed source modification in case of 304
		response code (patch by wwp). Make sure the temporary curl file gets
		removed when it's not needed anymore.

2006-02-22  21:23 Andrej Kacian <andrej@kacian.sk>
	* src/feed.[ch], src/feedprops.c
		Write formatted XML file, patch by Colin Leroy. Change temporary files
		name to curltmpXXXXXX, suggested by Brian Morrison <bdm at fenrir.org.uk>.

2006-02-14  01:09 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		Only update feed comments if this is set in feed preferences.

2006-02-14  01:09 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		Fixed check for presence of fetched feed.
	* configure.ac
		Add cvsXX suffix to version.

2006-02-13  23:43 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		Remove temporary file with fetched feed when preliminary XML processing
		fails in rssyl_fetch_feed().

2006-02-13  19:08 Colin Leroy <colin@colino.net>
	* src/feed.c
		Specify charset in HTML headers

2006-02-12  21:43 Colin Leroy <colin@colino.net>
	* src/rssyl_gtk.c
		Check for mainwin before using it

2006-02-12  18:30 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		304 response code is enough to determine that the source was indeed not
		modified.

2006-02-12  09:08 wwp <subscript@free.fr>
	* src/feed.c
		Added missing LF to a debug message.

2006-02-11  18:43 Colin Leroy <colin@colino.net>
	* src/feed.c
		Prevent possible double-free

2006-02-11  00:43 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c