@@ -18,5 +18,7 @@ void rssyl_prop_cb(FolderView *folderview, guint action,
 		GtkWidget *widget);
 void rssyl_refresh_all_cb(FolderView *folderview, guint action,
 		GtkWidget *widget);
+void rssyl_rename_cb(FolderView *folderview, guint action,
+		GtkWidget *widget);
 
 #endif /* __RSSYL_MENU_FEED */
